# BsDiffProject

./: README.md
app/: build.gradle
app/src/androidTest/java/com/hjq/bsdiff/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/hjq/bsdiff/: BsPatcher.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hjq/bsdiff/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
